added basic register, login and logout logic and html.